--- a/src/components/common/Header.module.css
+++ b/src/components/common/Header.module.css
@@ -1,6 +1,6 @@
 
 .Header {
-  width: 1440px;
+  width: 100%;
   background-color: #2aa7ff;
   height: 40px;
   display: flex;
@@ -8,6 +8,7 @@
   align-items: center;
 
   @media screen and (max-width: 768px) {
+    width: 100%;
     height: auto;
     flex-wrap: wrap;
   }
