--- a/src/components/common/NavBar.module.css
+++ b/src/components/common/NavBar.module.css
@@ -1,75 +1,78 @@
-/* .NavBarContainer {
-  display: flex;
-  width: 1440px;
-  height: 96px;
-  align-items: center;
+.NavBarWrapper {
   background: linear-gradient(
     81deg,
     #e7f0ff 9.01%,
     rgba(232, 241, 255, 0.47) 89.11%
   );
+  width: 100%;
+  height: 96px;
+  display: flex;
+  align-items: center;
   justify-content: space-around;
+
+  
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    height: auto;
+    padding: 16px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
 .NavBarMenu {
   display: flex;
   width: 912px;
   height: 40px;
+  align-items: center;
+  justify-content: space-between;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
-.SubContainer {
+.subCont {
   width: 694px;
   height: 21px;
   display: flex;
-  
+  list-style: none;
+  align-items: center;
+  justify-content: space-around;
+
+  @media screen and (max-width: 768px) {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 }
 
-.NavBarButtons {
+.menu {
+  height: 21px;
   font-family: Poppins;
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
   text-align: left;
   color: #102851;
-  margin-right: 20px;
-  margin-left: 20px;
-  border: 0;
-  border-radius: 0;
-  background: none;
+
 }
 
-.Booking {
+.booking {
   width: 130px;
   height: 40px;
-  border-radius: 8px;
   background: #2aa8ff;
+  border: 0;
+  border-radius: 8px;
   font-family: Poppins;
   font-size: 14px;
   font-weight: 500;
   line-height: 21px;
   letter-spacing: 0.02em;
   color: #ffffff;
-  border: 0;
-} */
 
-.NavBarWrapper{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 1440px;
-}
-
-.NavBarMenu{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    /* margin-left: 20px;
-    margin-right: 20px; */
-}
-
-.menus{
-    display: flex;
-    justify-content: space-around;
-    list-style: none;
-    width: 920px;
+  @media screen and (max-width: 768px) {
+    margin-top: 16px;
+    margin-left: 0;
+  }
 }
