--- a/src/components/common/Header.module.css
+++ b/src/components/common/Header.module.css
@@ -1,4 +1,9 @@
 
+*{
+  padding: 0;
+  margin: 0;
+}
+
 .Header {
   width: 100%;
   background-color: #2aa7ff;
@@ -11,6 +16,7 @@
     width: 100%;
     height: auto;
     flex-wrap: wrap;
+    padding: 10px
   }
 }
 
@@ -23,6 +29,7 @@
   text-align: left;
   color: #ffffff;
   @media screen and (max-width: 768px) {
+    width: 100%;
     height: auto;
     text-align: center;
   }
