--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -17,7 +17,7 @@
     @media screen and (max-width: 768px) {
       height: auto;
       flex-direction: column;
-      padding: 20px;
+      padding: 7px;
       text-align: center;
       }
   }
@@ -65,6 +65,9 @@
     @media screen and (max-width: 768px) {
       font-size: 24px;
       line-height: 1.2;
+      text-align: center;
+      display: flex;
+      flex-wrap: wrap;
       }
   }
   
@@ -79,6 +82,11 @@
     @media screen and (max-width: 768px) {
       font-size: 36px;
       line-height: 1.2;
+      text-align: center;
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
   
@@ -94,10 +102,16 @@
     @media screen and (max-width: 768px) {
       font-size: 36px;
       line-height: 1.2;
+      text-align: center;
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: auto;
+      margin-right: auto;
     }
   }
   
   .HeroPara {
+    
     width: 570px;
     height: 64px;
     color: #5C6169;
@@ -106,6 +120,8 @@
       width: 100%;
       height: auto;
       text-align: center;
+      display: flex;
+      flex-wrap: wrap;
     }
   }
   
