--- a/src/components/common/NavBar.module.css
+++ b/src/components/common/NavBar.module.css
@@ -10,10 +10,11 @@
     #e7f0ff 9.01%,
     rgba(232, 241, 255, 0.47) 89.11%
   );
-  width: 100%;
+  width: 1440px;
   height: 96px;
   display: flex;
   align-items: center;
+  text-align: center;
 
 
   
@@ -21,13 +22,14 @@
     
     height: auto;
     /* padding: 400px; */
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
   }
 }
 
 .NavBarMenu {
-  margin-left: 70px;
+  /* margin-left: 70px; */
   display: flex;
   width: 912px;
   height: 40px;
