--- a/src/pages/HomePageCSS/Hero.module.css
+++ b/src/pages/HomePageCSS/Hero.module.css
@@ -1,10 +1,11 @@
 .LandingPage{
-  width: 100%;
+  width: 1440px;
   height: 100%;
+  /* text-align: center; */
 }
 
 .HeroSecWrapper {
-    width: 100%;
+    width: 1440px;
     height: 736px;
     background: linear-gradient(
       81deg,
@@ -13,8 +14,10 @@
     );
     display: flex;
     justify-content: space-around;
+    /* text-align: center; */
    
     @media screen and (max-width: 768px) {
+      width: 100%;
       height: auto;
       flex-direction: column;
       padding: 10px;
@@ -25,12 +28,13 @@
   .TextWrapper {
     width: 663px;
     height: 207px;
-    margin-left: 95px;
+    margin-left: 60px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: flex-start;
-    margin-top: 35px;
+    /* margin-top: 35px; */
+    
 
     @media screen and (max-width: 768px) {
       width: 100%;
@@ -87,6 +91,7 @@
       flex-wrap: wrap;
       margin-left: auto;
       margin-right: auto;
+      display: block;
     }
   }
   
@@ -107,6 +112,7 @@
       flex-wrap: wrap;
       margin-left: auto;
       margin-right: auto;
+      display: block;
     }
   }
   
@@ -122,6 +128,10 @@
       text-align: center;
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      margin-top: 10px;
+      margin-bottom: 10px;
     }
   }
   
@@ -142,6 +152,7 @@
     @media screen and (max-width: 768px) {
       width: auto;
       padding: 12px 24px;
+      margin-bottom: 10px;
     }
     
   }
