--- a/src/pages/HomePageCSS/Hero.module.css
+++ b/src/pages/HomePageCSS/Hero.module.css
@@ -89,8 +89,8 @@
       text-align: center;
       display: flex;
       flex-wrap: wrap;
-      margin-left: auto;
-      margin-right: auto;
+      /* margin-left: auto;
+      margin-right: auto; */
       display: block;
     }
   }
@@ -110,8 +110,8 @@
       text-align: center;
       display: flex;
       flex-wrap: wrap;
-      margin-left: auto;
-      margin-right: auto;
+      /* margin-left: auto;
+      margin-right: auto; */
       display: block;
     }
   }
