--- a/src/pages/HomePageCSS/Hero.module.css
+++ b/src/pages/HomePageCSS/Hero.module.css
@@ -87,8 +87,8 @@
       font-size: 36px;
       line-height: 1.2;
       text-align: center;
-      display: flex;
-      flex-wrap: wrap;
+      /* display: flex;
+      flex-wrap: wrap; */
       /* margin-left: auto;
       margin-right: auto; */
       display: block;
@@ -108,8 +108,8 @@
       font-size: 36px;
       line-height: 1.2;
       text-align: center;
-      display: flex;
-      flex-wrap: wrap;
+      /* display: flex;
+      flex-wrap: wrap; */
       /* margin-left: auto;
       margin-right: auto; */
       display: block;
