--- a/src/pages/HomePageCSS/SearchForm.module.css
+++ b/src/pages/HomePageCSS/SearchForm.module.css
@@ -116,9 +116,10 @@ form {
   border-radius: 8px;
   @media screen and (max-width: 768px) {
     height: auto;
-    width: 100%;
-    margin-top: 10px;
+    width: auto;
+    margin-top: 30px;
     flex-direction: column;
+    justify-content: space-between;
     
   }
 }
@@ -138,6 +139,7 @@ form {
 
   @media screen and (max-width: 768px) {
     height: auto;
+    
 
   }
 }
