--- a/src/pages/HomePageCSS/SearchForm.module.css
+++ b/src/pages/HomePageCSS/SearchForm.module.css
@@ -14,7 +14,7 @@
 
   @media screen and (max-width: 768px) {
     width: 100%;
-    height: auto;
+    height: 100%;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
@@ -77,6 +77,7 @@ form {
 
 .BottomWrapper {
   display: flex;
+  height: auto;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -139,6 +140,7 @@ form {
 
   @media screen and (max-width: 768px) {
     height: auto;
+    /* width: auto; */
     
 
   }
