--- a/src/pages/HomePageCSS/SearchForm.module.css
+++ b/src/pages/HomePageCSS/SearchForm.module.css
@@ -14,7 +14,7 @@
 
   @media screen and (max-width: 768px) {
     width: 100%;
-    height: 100%;
+    height: auto;
     align-items: center;
     justify-content: center;
     margin: 0 auto;
@@ -22,6 +22,7 @@
     right: 0;
     top:0;
     position: relative;
+    padding: 10px;
   }
 }
 
@@ -140,7 +141,8 @@ form {
 
   @media screen and (max-width: 768px) {
     height: auto;
-    /* width: auto; */
+    width: 100%;
+    margin-bottom: 10px;
     
 
   }
