--- a/src/pages/HomePageCSS/SearchForm.module.css
+++ b/src/pages/HomePageCSS/SearchForm.module.css
@@ -120,8 +120,8 @@ form {
     height: auto;
     width: auto;
     margin-top: 30px;
-    flex-direction: column;
-    justify-content: space-between;
+    /* flex-direction: column; */
+    justify-content: space-around;
     
   }
 }
