--- a/src/pages/HomePageCSS/SearchForm.module.css
+++ b/src/pages/HomePageCSS/SearchForm.module.css
@@ -117,11 +117,12 @@ form {
 
   border-radius: 8px;
   @media screen and (max-width: 768px) {
-    height: auto;
-    width: auto;
+    /* height: auto; */
+    width: 100%;
     margin-top: 30px;
     /* flex-direction: column; */
     justify-content: space-around;
+    align-items: center;
     
   }
 }
@@ -140,9 +141,9 @@ form {
   border: 1px solid #2aa7ff;
 
   @media screen and (max-width: 768px) {
-    height: auto;
-    width: 100%;
+   height: auto;
     margin-bottom: 10px;
+    justify-content: space-around;
     
 
   }
