--- a/src/pages/HomePageCSS/Advertise.module.css
+++ b/src/pages/HomePageCSS/Advertise.module.css
@@ -23,12 +23,15 @@
     flex-direction: column;
     width: 80%;
     justify-content: space-around;
+    align-items: center;
     }
 }
 
 .img{
     @media screen and (max-width: 768px) {
         margin-bottom: 100px;
+        width: 80px;
+        height: auto;
         }
 }
 
@@ -42,7 +45,7 @@
     height: auto;
     flex-direction: column;
     width: 80%;
-    justify-content: space-around;
+    /* justify-content: space-evenly; */
     /* align-items: center; */
     }
 
@@ -50,10 +53,11 @@
 
 .imgAdv{
     @media screen and (max-width: 768px) {
-        height: auto;
+        height: 10px;
+        width: auto;
         flex-direction: column;
         width: 10%;
-        justify-content: space-around;
+        
         align-items: center;
         margin-top: 20px;
         }
