Improved the UI for mobile and tablets

--- a/src/components/common/NavBar.module.css
+++ b/src/components/common/NavBar.module.css
@@ -22,7 +22,7 @@
     
     height: auto;
     /* padding: 400px; */
-    width: 100%;
+    width: 110%;
     flex-direction: column;
     align-items: flex-start;
   }
@@ -67,6 +67,11 @@
   line-height: 21px;
   text-align: left;
   color: #102851;
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
 }
 
