--- a/src/pages/HomePageCSS/Specialization.module.css
+++ b/src/pages/HomePageCSS/Specialization.module.css
@@ -14,8 +14,8 @@
 }
 
 .text {
-    margin-left: auto;
-    margin-right: auto;
+  margin-left: auto;
+  margin-right: auto;
   font-family: Poppins;
   font-size: 48px;
   font-weight: 600;
@@ -36,7 +36,6 @@
 }
 
 .item {
-  
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -48,25 +47,22 @@
   box-shadow: 0px 34px 44px 0px #d5dbe470;
   margin-bottom: 30px;
   height: 136px;
-width:121px ;
+  width: 121px;
 }
 
-.item span{
-    font-family: Poppins;
-font-size: 18px;
-font-weight: 500;
-line-height: 27px;
-text-align: center;
-color: #ABB6C7;
-
-
+.item span {
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 27px;
+  text-align: center;
+  color: #abb6c7;
 }
 
 @media screen and (max-width: 768px) {
   .Wrapper {
     /*... */
     height: auto;
-    
   }
 
   .iconwrapper {
@@ -81,8 +77,20 @@ color: #ABB6C7;
     margin-bottom: 30px;
   }
 
-  .text{
+  .text {
     width: 40%;
     margin-top: 20px;
+  }
+
+  .item span {
+    line-height: 16px;
+    font-size: 12px;
+    font-weight: 300;
+  }
+
+  .text {
+    font-size: 28px;
+  font-weight: 400;
+  line-height: 37px;
   }
 }
