--- a/src/components/common/Carousel/carousel.css
+++ b/src/components/common/Carousel/carousel.css
@@ -1,3 +1,4 @@
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -7,9 +8,12 @@
   text-align: center;
   font-size: 18px;
   background: #fff;
+
+  /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: center;
+  
 }
 
 .swiper-slide img {
@@ -17,4 +21,44 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.SlideWrapper{
+  height: 505px;
+  width: 370px;
+  justify-content: space-between;
+  text-align: center;
+
+}
+
+.TextWrapper{
+  height: 75px;
+  width: 370px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.DoctorName{
+  font-family: Poppins;
+font-size: 24px;
+font-weight: 400;
+line-height: 48px;
+text-align: center;
+color: #1B3C74;
+
+
+
+}
+
+.DoctorSpe{
+  font-family: Poppins;
+font-size: 17px;
+font-weight: 500;
+line-height: 27px;
+text-align: center;
+color: #2AA7FF;
+
+  
 }
