--- a/src/pages/HomePageCSS/Advertise.module.css
+++ b/src/pages/HomePageCSS/Advertise.module.css
@@ -1,6 +1,6 @@
 .AdvertiseWrapper {
   height: 429px;
-  width: 1440px;
+  width: 100%;
   background: #ffffff;
   display: flex;
   flex-direction: column;
@@ -37,7 +37,7 @@
 }
 
 .BottomWrapper {
-  width: 1150px;
+  width: 100%;
   height: 37px;
   padding: 9px 0px 18px 0px;
   text-align: center;
