--- a/src/pages/HomePageCSS/Hero.module.css
+++ b/src/pages/HomePageCSS/Hero.module.css
@@ -1,5 +1,5 @@
 .LandingPage{
-  width: 1440px;
+  width: 100%;
   height: 100%;
   /* text-align: center; */
   @media screen and (max-width: 768px) {
@@ -9,7 +9,7 @@
 }
 
 .HeroSecWrapper {
-    width: 1440px;
+    width: 100%;
     height: 736px;
     background: linear-gradient(
       81deg,
