--- a/src/pages/HomePageCSS/SearchForm.module.css
+++ b/src/pages/HomePageCSS/SearchForm.module.css
@@ -1,10 +1,10 @@
 .SearchFormWrapper {
-  width: 1170px;
+  width: 100%;
   height: 429px;
   background: #ffffff;
   position: absolute;
   top: 510px;
-  left: 90px;
+  /* left: 90px; */
   border-radius: 15px;
   box-shadow: 6px 6px 35px 0px #1028511c;
   display: flex;
