--- a/src/pages/HomePageCSS/Specialization.module.css
+++ b/src/pages/HomePageCSS/Specialization.module.css
@@ -8,8 +8,9 @@
   );
   display: flex;
   flex-direction: column;
+  /* flex-wrap: wrap; */
   /* align-items: center; */
-  justify-content: space-around;
+  justify-content: space-evenly;
   /* text-align: center; */
 }
 
@@ -28,9 +29,9 @@
 .iconwrapper {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  width: 80%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
