--- a/src/components/common/Download.module.css
+++ b/src/components/common/Download.module.css
@@ -17,14 +17,6 @@
   align-items: center;
 
   height: 542px;
-
-  /* position: relative; */
-
-  /* background: linear-gradient(
-    81deg,
-    #e7f0ff 9.01%,
-    rgba(232, 241, 255, 0.47) 89.11%
-  ); */
 }
 
 .ImageContainer {
@@ -79,6 +71,21 @@
   }
 }
 
+.btn{
+  width: 121px;
+height: 50px;
+background: #2AA8FF;
+font-family: Poppins;
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0.02em;
+color: #FFFFFF;
+border:0;
+border-radius: 8px;
+
+
+}
 .inputContainer {
   margin-top: 18px;
   display: flex;
@@ -111,7 +118,7 @@
   margin-top: 100px;
 
   img {
-    width: 168px;
+    width: 140px;
     height: 58px;
 
     
@@ -148,6 +155,34 @@
   .downloadText{
     height: auto;
   }
+
+  .btn{
+    width: 15%;
+  height: auto;
+  background: #2AA8FF;
+  font-family: Poppins;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  border: 0;
+  border-radius: 8px;
+  
+  }
+
+  .buttonGroup {
+
+    display: flex;
+    justify-content: space-between;
+    margin-top: 100px;
+  
+    img {
+      width: 100px;
+      height: auto;
+  
+      
+    }}
 }
 
 @media screen and (max-width: 320px) {
