--- a/src/components/common/NavBar.module.css
+++ b/src/components/common/NavBar.module.css
@@ -5,11 +5,11 @@
 }
 
 .NavBarWrapper {
-  background: linear-gradient(
+  /* background: linear-gradient(
     81deg,
     #e7f0ff 9.01%,
     rgba(232, 241, 255, 0.47) 89.11%
-  );
+  ); */
   width: 100%;
   height: 96px;
   display: flex;
@@ -67,6 +67,7 @@
   line-height: 21px;
   text-align: left;
   color: #102851;
+  cursor: pointer;
   @media screen and (max-width: 768px) {
     width: 100%;
     flex-direction: column;
