successfully made the medical-centers page responsive

--- a/src/components/common/Download.module.css
+++ b/src/components/common/Download.module.css
@@ -190,6 +190,11 @@ border-radius: 8px;
     flex-direction: column;
   }
 
+  .parentDiv {
+    margin-top: -500px;
+    height: 1550px;
+  }
+
   .img {
     /* margin-top: 50px; */
     width: 270px;
