--- a/src/pages/DetailsPage1CSS/MedicalCentersPage.module.css
+++ b/src/pages/DetailsPage1CSS/MedicalCentersPage.module.css
@@ -1,3 +1,17 @@
+.MainWrapper{
+  background: linear-gradient(
+    81deg,
+    #e7f0ff 9.01%,
+    rgba(232, 241, 255, 0.47) 89.11%
+  );
+  width: 100%;
+
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    height: auto;
+  }
+}
+
 .Wrapper {
   background: linear-gradient(
     81deg,
@@ -246,4 +260,17 @@ margin-left: 8px;
         text-align: center;
       }
 
+}
+
+.SlotWrapper{
+  height: 500px;
+  width: 785.56px;
+  background-color: #01a400;
+
+  @media screen and (max-width: 768px) {
+    width: 78%;
+    height: auto;
+
+  }
+  
 }
