--- a/src/pages/DetailsPage1CSS/StyleBelow.module.css
+++ b/src/pages/DetailsPage1CSS/StyleBelow.module.css
@@ -1,14 +1,37 @@
 .Wrapper {
   width: 100%;
   height: 110px;
-
+  margin-bottom: 10px;
   border-radius: 0px 0px 16px 16px;
   background: linear-gradient(91.75deg, #2aa7ff 1.4%, #0c8ce6 100.57%);
-
- 
 }
 
 @media screen and (max-width: 1023px) {
-    .Wrapper{
-    height: 1vh;}
+  .Wrapper {
+    height: auto;
+    text-align: center;
+    margin-bottom: 10px;
   }
+}
+
+.text {
+  font-family: Ubuntu;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 45.96px;
+  margin-left: 80px;
+  color: #ffffff;
+  top: 180px;
+  position: absolute;}
+
+  @media screen and (max-width: 1023px) {
+    .text{
+      font-size: 30px;
+      line-height: 35px;
+      margin: 0 auto;
+      left: 0;
+      right: 0;
+      top:0;
+      position: relative;
+    }
+}
