--- a/src/pages/HomePageCSS/SearchForm.module.css
+++ b/src/pages/HomePageCSS/SearchForm.module.css
@@ -9,7 +9,7 @@
   box-shadow: 6px 6px 35px 0px #1028511c;
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
   justify-content: space-around;
 
   @media screen and (max-width: 768px) {
@@ -30,10 +30,12 @@ form {
   display: flex;
   text-align: center;
   justify-content: space-around;
+  /* align-items: center; */
+  width: 95%;
 
   @media screen and (max-width: 768px) {
     height: auto;
-    width: 100%;
+    /* width: 100%; */
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
@@ -144,6 +146,7 @@ form {
    height: auto;
     margin-bottom: 10px;
     justify-content: space-around;
+    width: 100%;
     
 
   }
